<resources>
    <string name="app_name">AliyunLiveDemo</string>

    <!--直播-->
    <string name="all_video_start">播放</string>
    <string name="all_video_pause">暂停</string>
    <string name="all_video_resume">继续</string>
    <string name="all_video_stop">停止</string>
    <string name="all_video_replay">重播</string>
    <string name="all_video_mute">静音:</string>
    <string name="all_rb_on">开</string>
    <string name="all_rb_off">关</string>
    <string name="all_video_volume">音量：</string>
    <string name="all_video_brightness">亮度：</string>
    <string name="all_video_zoom">缩放模式：</string>
    <string name="all_video_zoom_fit">原比例填充（fit）</string>
    <string name="all_video_zoom_fill">裁剪占满全屏（fill）</string>
    <string name="all_video_cache_buffer">最大丢帧缓冲区</string>
    <string name="all_video_cache_unit">毫秒</string>
    <string name="all_buffer_duration_nagtive">缓冲时长不能为负数</string>
    <string name="all_jump_live">跳转到直播页面</string>
    <string name="all_jump_vod">跳转到点播界面</string>
    <string name="vod_speed_mode">变速模式</string>
    <string name="vod_half">0.5倍</string>
    <string name="vod_one_times">1.0倍</string>
    <string name="vod_one_and_half_times">1.5倍</string>
    <string name="vod_two_times">2.0倍</string>
    <string name="all_live_douyu">斗鱼游戏直播</string>
    <string name="all_live_lol">LOL直播</string>
    <string name="all_live_book_reading">读书会</string>
    <string name="all_push_flow_1_3">视频推流测试V1.3版本</string>
    <string name="all_push_flow_3_0">视频推流测试V3.0版本</string>
    <string name="all_pull_video_flow">视频拉流测试</string>
    <string name="all_dialog_tips">提示</string>
    <string name="all_dialog_confirm">确定</string>
    <string name="all_dialog_cancel">取消</string>
    <string name="all_pull_flow_test">直播拉流测试</string>
    <string name="all_push_net_connection_failed">网络连接失败</string>
    <string name="no_camera_permission">没有权限使用摄像头，请开启摄像头权限</string>
    <string name="no_record_audio_permission">没有权限使用录音，请开启录音权限</string>

    <!--推流信息-->
    <string name="VIDEO_CAPTURE_FPS">视频采集帧率（实时帧率）:</string>
    <string name="AUDIO_ENCODER_FPS">音频编码帧率（实时帧率）:</string>
    <string name="VIDEO_ENCODER_FPS">视频编码帧率（实时帧率）:</string>
    <string name="OUTPUT_BITRATE">输出码率（实时码率）:</string>
    <string name="AV_OUTPUT_DIFF">当前输出流，audio pts与video pts的差值:</string>
    <string name="AUDIO_OUTPUT_FPS">音频输出帧率（实时帧率）:</string>
    <string name="VIDEO_OUTPUT_FPS">视频输出帧率（实时帧率）:</string>
    <string name="STREAM_PUBLISH_TIME">推流发布耗时（推流开始到发布流成功耗时）:</string>
    <string name="STREAM_SERVER_IP">推流服务器IP:</string>
    <string name="VIDEO_DELAY_DURATION">视频延迟时长:</string>
    <string name="AUDIO_DELAY_DURATION">音频延迟时长:</string>
    <string name="VIDEO_CACHE_FRAME_CNT">缓冲队列视频帧数:</string>
    <string name="AUDIO_CACHE_FRAME_CNT">缓冲队列音频帧数:</string>
    <string name="VIDEO_CACHE_BYTE_SIZE">缓冲队列视频数据总数:</string>
    <string name="AUDIO_CACHE_BYTE_SIZE">缓冲队列音频数据总数:</string>
    <string name="VIDEO_FRAME_DISCARD_CNT">视频丢弃总帧数:</string>
    <string name="AUDIO_FRAME_DISCARD_CNT">音频丢弃总帧数:</string>
    <string name="CUR_VIDEO_BUEATY_DURATION">当前视频帧美颜耗时:</string>
    <string name="CUR_VIDEO_ENCODER_DURATION">当前视频帧编码耗时:</string>
    <string name="cur_video_encode_bitrate">当前视频编码码率:</string>
    <string name="VIDEO_OUTPUT_FRAME_COUNT">获取视频流已发送帧数:</string>
    <string name="VIDEO_DATA">视频流已发送数据量:</string>
    <string name="VIDEO_BUFFER_COUNT">当前手机端缓存的视频帧总数:</string>
    <string name="VIDEO_DROPPED_FRAMECOUNT">当前直播视频流丢帧总数:</string>
    <string name="AUDIO_DATA">音频流已发送数据量:</string>

    <string name="setting_resolution_180P">180P</string>
    <string name="setting_resolution_240P">240P</string>
    <string name="setting_resolution_360P">360P</string>
    <string name="setting_resolution_480P">480P</string>
    <string name="setting_resolution_540P">540P</string>
    <string name="setting_resolution_720P">720P</string>
    <string name="setting_audio_441">44.1KHz</string>
    <string name="setting_audio_320">32KHz</string>

    <!--推流SDK_v3.0-->
    <string name="pusher_setting">推流设置</string>
    <string name="input_tips">请输入推流地址或扫描二维码</string>
    <string name="resolution_label">分辨率</string>
    <string name="target_bitrate">目标码率</string>
    <string name="target_rate_value">1500</string>
    <string name="min_bitrate">最小码率</string>
    <string name="min_rate_value">400</string>
    <string name="initial_bitrate">初始码率</string>
    <string name="initial_bit_value">800</string>
    <string name="captrue_fps">采集帧率</string>
    <string name="init_fps">20</string>
    <string name="audio_sampling_rate">音频采样率</string>
    <string name="audio_rate_value">20</string>
    <string name="sound_track">声道</string>
    <string name="single_track">单声道</string>
    <string name="dual_track">双声道</string>
    <string name="reconnect_duration">重连时长</string>
    <string name="reconnect_value">1000</string>
    <string name="reconnect_times">重连次数</string>
    <string name="retry_count">5</string>
    <string name="landscape_model">横屏推流</string>
    <string name="portrait">Portrait</string>
    <string name="homeLeft">HomeLeft</string>
    <string name="homeRight">HomeRight</string>
    <string name="front_camera">前置摄像头</string>
    <string name="setting_pre_mirror">预览镜像</string>
    <string name="setting_push_mirror">推流镜像</string>
    <string name="watermark">水印</string>
    <string name="watermark_setting">水印位置</string>
    <string name="audio_only_push_streaming">纯音频</string>
    <string name="auto_focus">自动对焦</string>
    <string name="beauty_enable">开启美颜</string>
    <string name="hardware_encode">硬编</string>
    <string name="software_encode">软编</string>
    <string name="asynchronous_interface">异步接口</string>
    <string name="start_button">开始推流</string>
    <string name="start_preview_button">开始预览</string>
    <string name="stop_preview_button">停止预览</string>
    <string name="pause_button">暂停</string>
    <string name="resume_button">恢复</string>
    <string name="stop_button">停止推流</string>
    <string name="more_setting_button">更多设置</string>
    <string name="repush_button">重新推流</string>
    <string name="slide_right_view_log_char">右滑查看log图表</string>
    <string name="slide_left_view_log">左滑查看log</string>
    <string name="share_button">分享</string>
    <string name="beauty_on">开启美颜</string>
    <string name="beauty_off">关闭美颜</string>
    <string name="beauty_white">美白</string>
    <string name="beauty_skin_smooth">磨皮</string>
    <string name="beauty_ruddy">红润</string>
    <string name="beauty_brightness">亮度</string>
    <string name="beauty_saturation">饱和度</string>
    <string name="save_log">保存日志</string>
    <string name="modules_time_consuming">各模块耗时</string>
    <string name="modules_audio_fps">各模块音频帧率</string>
    <string name="modules_video_fps">各模块视频帧率</string>
    <string name="modules_bitrate">各模块码率</string>
    <string name="capture">采集</string>
    <string name="render">渲染</string>
    <string name="encode">编码</string>
    <string name="push">推流</string>
    <string name="local_log">本地日志</string>
    <string name="times">次</string>
    <string name="total_time">总耗时</string>
    <string name="audio_fps">各模块audio fps</string>
    <string name="video_fps">各模块video fps</string>
    <string name="bitrate">各模块bitrate</string>
    <string name="video_encode">视频编码</string>
    <string name="audio_encode">音频编码</string>
    <string name="buffer">各模块buffer</string>
    <string name="video_renderbuffer">视频渲染</string>
    <string name="video_encodebuffer">视频编码</string>
    <string name="video_uploadbuffer">视频上传</string>
    <string name="audio_encodebuffer">音频编码</string>
    <string name="audio_uploadbuffer">音频上传</string>
    <string name="start_preview">开始预览</string>
    <string name="stop_preview">停止预览</string>
    <string name="start_push">开始推流</string>
    <string name="stop_push">停止推流</string>
    <string name="pause_push">暂停</string>
    <string name="resume_push">恢复</string>
    <string name="first_frame">首帧渲染</string>
    <string name="setting_flash">开启闪光灯</string>
    <string name="exit_publisher">退出</string>
    <string name="advanced_options">高级选项</string>
    <string name="GOP">Gop</string>
    <string name="push_url">推流地址</string>
    <string name="ispushing">是否推流</string>
    <string name="publisher_log">推流参数log：</string>
    <string name="video_pts">当前Video pts:</string>
    <string name="audio_pts">当前Audio pts：</string>
    <string name="keyframe_pts">当前KeyFrame pts:</string>
    <string name="video_buffer">当前编码队列Video Buffer：</string>
    <string name="audio_buffer">当前编码队列Audio Buffer：</string>
    <string name="rtmp_video_buffer">当前RTMP队列Video Buffer：</string>
    <string name="rtmp_audio_buffer">当前RTMP队列Audio Buffer：</string>
    <string name="drop_video_frame">丢弃Video帧：</string>
    <string name="drop_audio_frame">丢弃Audio帧：</string>
    <string name="video_size">上传Video总大小（KB）：</string>
    <string name="audio_size">上传Audio总大小（KB）：</string>
    <string name="no_read_phone_state_permission">没有读取用户数据的权限，请开启该权限</string>
    <string name="no_write_external_storage_permission">没有文件写权限，请开启该权限</string>
    <string name="no_read_external_storage_permission">没有文件读权限，请开启该权限</string>
    <string name="dialog_title">错误提示</string>
    <string name="ok">确定</string>
    <string name="reconnect">重连</string>
    <string name="network_poor">网络差，请退出或者重连</string>
    <string name="network_recovery">网络恢复</string>
    <string name="reconnect_start">重连开始</string>
    <string name="reconnect_fail">重连失败</string>
    <string name="connect_fail">连接失败</string>
    <string name="reconnect_success">重连成功</string>
    <string name="senddata_timeout">发送数据超时</string>
    <string name="restart_success">重启成功</string>
    <string name="system_error">系统错误：</string>
    <string name="sdk_error">SDK错误：</string>
    <string name="argument_exception">参数错误</string>
    <string name="state_exception">状态错误</string>
    <string name="bite_error">码率参数设置错误！</string>
    <string name="drop_frame">丢帧</string>
    <string name="adjust_bitrate">调整码率</string>
    <string name="adjust_fps">调整帧率</string>
    <string name="url_empty">请输入推流地址</string>
    <string name="min_fps">最小帧率</string>

</resources>
