<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_12"
    tools:context="com.example.aliyunlivedemo.MainActivity">

    <Button
        android:id="@+id/btn_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_jump_live" />

    <Button
        android:id="@+id/btn_vod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/all_jump_vod" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/dp_6"
        android:layout_marginTop="@dimen/dp_6"
        android:background="#989898" />

    <!--推流测试1.3-->
    <Button
        android:id="@+id/btn_push_video_flow_v1_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_push_flow_1_3" />

    <!--推流测试3.0-->
    <Button
        android:id="@+id/btn_push_video_flow_v3_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_push_flow_3_0" />

    <!--拉流测试-->
    <Button
        android:id="@+id/btn_pull_video_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/all_pull_video_flow" />

</android.support.v7.widget.LinearLayoutCompat>
