<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--播放页面-->
    <SurfaceView
        android:id="@+id/surfaceview_vod"
        android:layout_width="match_parent"
        android:layout_height="220dp" />

    <!--bar-->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal"
        android:padding="@dimen/dp_4">

        <TextView
            android:id="@+id/tv_vod_currentPosition"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            tools:text="0:00" />

        <SeekBar
            android:id="@+id/progress_vod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_vod_totalDuration"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            tools:text="04:00" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_6"
        android:paddingLeft="@dimen/dp_6"
        android:paddingRight="@dimen/dp_6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--操作按钮-->
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_vod_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/all_video_start" />

                <Button
                    android:id="@+id/btn_vod_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/all_video_stop" />

                <Button
                    android:id="@+id/btn_vod_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/all_video_pause" />

                <Button
                    android:id="@+id/btn_vod_replay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/all_video_replay" />

            </android.support.v7.widget.LinearLayoutCompat>

            <!--静音-->
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <!--静音-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/all_video_mute" />

                <RadioGroup
                    android:id="@+id/rg_mute_vod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_12"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/muteOn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_rb_on" />

                    <RadioButton
                        android:id="@+id/muteOff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/all_rb_off" />
                </RadioGroup>
            </android.support.v7.widget.LinearLayoutCompat>

            <!--调节音量-->
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_video_volume" />

                <SeekBar
                    android:id="@+id/seekbar_volume_vod"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </android.support.v7.widget.LinearLayoutCompat>

            <!--调节亮度-->
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_video_brightness" />

                <SeekBar
                    android:id="@+id/brightnessProgress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </android.support.v7.widget.LinearLayoutCompat>

            <!--缩放模式-->
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/dp_8"
                    android:text="@string/all_video_zoom" />

                <RadioGroup
                    android:id="@+id/rg_scaling_vod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/fit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/all_video_zoom_fit" />

                    <RadioButton
                        android:id="@+id/fill"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_video_zoom_fill" />
                </RadioGroup>
            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vod_speed_mode" />

                <RadioGroup
                    android:id="@+id/rg_vod_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/speed05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vod_half" />

                    <RadioButton
                        android:id="@+id/speed10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/vod_one_times" />

                    <RadioButton
                        android:id="@+id/speed15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vod_one_and_half_times" />

                    <RadioButton
                        android:id="@+id/speed20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vod_two_times" />
                </RadioGroup>
            </android.support.v7.widget.LinearLayoutCompat>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.v7.widget.LinearLayoutCompat>