<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d9d9d9"
    android:orientation="vertical">

    <!--播放页面-->
    <SurfaceView
        android:id="@+id/surfaceview_live"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginBottom="@dimen/dp_6" />

    <!--设置-->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:padding="@dimen/dp_10">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_8"
            android:paddingRight="@dimen/dp_8">

            <!--控制按钮-->
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_play_live"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_video_start" />
                <Button
                    android:id="@+id/btn_stop_live"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_video_stop" />


            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <!--静音-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/all_video_mute" />

                <RadioGroup
                    android:id="@+id/rg_mute_live"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_12"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/muteOn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_rb_on" />

                    <RadioButton
                        android:id="@+id/muteOff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/all_rb_off" />
                </RadioGroup>
            </android.support.v7.widget.LinearLayoutCompat>

            <!--调节音量-->
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_video_volume" />

                <SeekBar
                    android:id="@+id/seekbar_live"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </android.support.v7.widget.LinearLayoutCompat>

            <!--调节亮度-->
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_video_brightness" />

                <SeekBar
                    android:id="@+id/brightnessProgress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </android.support.v7.widget.LinearLayoutCompat>

            <!--缩放模式-->
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/dp_8"
                    android:text="@string/all_video_zoom" />

                <RadioGroup
                    android:id="@+id/rg_scaling_live"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/fit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/all_video_zoom_fit" />

                    <RadioButton
                        android:id="@+id/fill"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_video_zoom_fill" />
                </RadioGroup>
            </android.support.v7.widget.LinearLayoutCompat>

            <!--缓冲-->
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_video_cache_buffer" />

                <EditText
                    android:id="@+id/max_buff_duration"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:cursorVisible="false"
                    android:text="8000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_video_cache_unit" />
            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>

</android.support.v7.widget.LinearLayoutCompat>