<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <RelativeLayout
        android:id="@+id/top_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/exit"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@mipmap/back" />

        <LinearLayout
            android:id="@+id/top_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/beauty_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/beauty_selector"
                android:clickable="true" />

            <ImageView
                android:id="@+id/volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/volume_selector"
                android:clickable="true" />

            <ImageView
                android:id="@+id/flash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/flash_selector"
                android:clickable="true" />

            <ImageView
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@mipmap/camera_id" />
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/push_url_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar_layout"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/push_url" />

        <TextView
            android:id="@+id/push_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/push_url_layout"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/ispushing" />

        <TextView
            android:id="@+id/isPushing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/preview_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/stop_preview_button" />

        <Button
            android:id="@+id/push_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/start_button" />

        <Button
            android:id="@+id/opera_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/pause_button" />

        <Button
            android:id="@+id/restart_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/repush_button" />

        <Button
            android:id="@+id/more"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/more_setting_button" />

    </LinearLayout>

</RelativeLayout>